AP design requires separate handling of @GenerateConfigurations and @GenerateConfiguration ...